[gd_scene load_steps=22 format=3 uid="uid://bab57487xo37b"]

[ext_resource type="Texture2D" uid="uid://c8upf6osvdwx5" path="res://assets/textures/grids/Orange/texture_05.png" id="2_eex02"]
[ext_resource type="Texture2D" uid="uid://c8arnlq67qi7" path="res://assets/textures/grids/Dark/texture_05.png" id="3_arfpd"]
[ext_resource type="Texture2D" uid="uid://does8rpwjdh1r" path="res://assets/textures/grids/Red/texture_05.png" id="4_cfi2i"]
[ext_resource type="PackedScene" uid="uid://butv4eka18auv" path="res://scenes/player.tscn" id="5_ew8no"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="6_f7gjl"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="7_t7aeq"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="8_lgxm4"]
[ext_resource type="Script" uid="uid://cf3v7qys7b75b" path="res://scripts/vault_area.gd" id="9_eex02"]

[sub_resource type="GDScript" id="GDScript_v74dp"]
script/source = "extends Node3D

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta: float) -> void:
	#pass
"

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sgp6g"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_o5qli"]
sky_material = SubResource("ProceduralSkyMaterial_sgp6g")

[sub_resource type="Environment" id="Environment_0wfyh"]
background_mode = 2
sky = SubResource("Sky_o5qli")
tonemap_mode = 2
sdfgi_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.644337, 0.675688, 0.724948, 1)
fog_density = 0.001

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sugp2"]
albedo_texture = ExtResource("2_eex02")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tbgi4"]
albedo_texture = ExtResource("2_eex02")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8iqx6"]
albedo_texture = ExtResource("2_eex02")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0wfyh"]
albedo_texture = ExtResource("3_arfpd")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jyhfs"]
albedo_texture = ExtResource("4_cfi2i")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tefeu"]
albedo_texture = ExtResource("4_cfi2i")
uv1_triplanar = true

[sub_resource type="Resource" id="Resource_gdv5h"]
script = ExtResource("8_lgxm4")
duration = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_pjayo"]
size = Vector3(6.6083984, 2.0058594, 7.716797)

[sub_resource type="Resource" id="Resource_pjayo"]
script = ExtResource("8_lgxm4")
duration = 0.0

[node name="VaultLevel" type="Node3D"]
script = SubResource("GDScript_v74dp")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0wfyh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.245308, 0.553276, -0.796059, 1.39791e-08, 0.821149, 0.570714, 0.969445, 0.14, -0.201434, -10.6018, 12.7278, 0)
shadow_enabled = true

[node name="vault_complex" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="north_wall" type="CSGBox3D" parent="vault_complex"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, 0)
size = Vector3(1, 6.8, 10.8)
material = SubResource("StandardMaterial3D_sugp2")

[node name="vault_door_subtraction" type="CSGCylinder3D" parent="vault_complex/north_wall"]
transform = Transform3D(-1.18021e-07, -2.7, 0, 2.7, -1.18021e-07, 0, 0, 0, 2.7, -0.007281661, -3.3, 0)
layers = 2
operation = 2
radius = 0.8
height = 0.4888916
sides = 12
material = SubResource("StandardMaterial3D_tbgi4")

[node name="south_wall" type="CSGBox3D" parent="vault_complex"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.735786, 3.4, 0)
size = Vector3(0.46875, 6.8, 10.8)
material = SubResource("StandardMaterial3D_sugp2")

[node name="south_wall_subtraction" type="CSGBox3D" parent="vault_complex/south_wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.032470703, -2.4726324, 0)
operation = 2
size = Vector3(1.0649414, 2.6102295, 1.9064941)
material = SubResource("StandardMaterial3D_8iqx6")

[node name="east_wall" type="CSGBox3D" parent="vault_complex"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.25, 3.4, 5.41)
size = Vector3(23.5, 6.9, 0.2)
material = SubResource("StandardMaterial3D_sugp2")

[node name="floor" type="CSGBox3D" parent="vault_complex"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.8, -0.05, 0)
size = Vector3(36.6, 0.1, 29.3)
material = SubResource("StandardMaterial3D_0wfyh")

[node name="west_wall" type="CSGBox3D" parent="vault_complex"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.2, 3.4, -5.48)
size = Vector3(23.5, 6.9, 0.2)
material = SubResource("StandardMaterial3D_sugp2")

[node name="vault" type="CSGBox3D" parent="vault_complex"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.45, 1.4, 0)
size = Vector3(5.9, 3, 7.8)
material = SubResource("StandardMaterial3D_jyhfs")

[node name="vault_subtraction" type="CSGBox3D" parent="vault_complex/vault"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.099999905, -0.05000007, -2.38419e-07)
operation = 2
size = Vector3(5.9, 2.7, 7.6)
material = SubResource("StandardMaterial3D_tefeu")

[node name="player" parent="." instance=ExtResource("5_ew8no")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.6569986, 0, 7.298099e-07)

[node name="Camera3D" type="Camera3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(-0.21100235, 0.42524317, -0.8801397, 0, 0.90041214, 0.43503782, 0.9774854, 0.091794044, -0.18998909, -16.356739, 6.771544, -2.9572597)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("6_f7gjl")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="hallway" type="Node3D" parent="."]
transform = Transform3D(-0.6538886, -0.31840196, 0.68633026, 0, 0.90713537, 0.42083776, -0.75659066, 0.27518106, -0.5931657, 5.894, 2.1924844, -3.1795292)

[node name="hallway_camera" type="Node3D" parent="hallway" node_paths=PackedStringArray("look_at_target")]
transform = Transform3D(-0.21100228, 0.4252431, -0.8801393, 0, 0.900412, 0.4350376, 0.97748506, 0.09179404, -0.189989, 14.381343, 11.299681, -13.47617)
script = ExtResource("7_t7aeq")
priority = 1
look_at_mode = 2
look_at_target = NodePath("../../player")
tween_resource = SubResource("Resource_gdv5h")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="vault" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.28826547, 0.9313531, 0)

[node name="vault_area" type="Area3D" parent="vault" node_paths=PackedStringArray("area_cam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.924767, 0, 0)
script = ExtResource("9_eex02")
area_cam = NodePath("../vault_camera")

[node name="CollisionShape3D" type="CollisionShape3D" parent="vault/vault_area"]
transform = Transform3D(1, 0, 0, 0, 1, -1.4901161e-08, 2.9802322e-08, 0, 1, 4.3709354, 0.13204741, -2.3398457e-09)
shape = SubResource("BoxShape3D_pjayo")

[node name="vault_camera" type="Node3D" parent="vault"]
transform = Transform3D(-0.6538886, -0.31840196, 0.68633026, 0, 0.90713537, 0.42083776, -0.75659066, 0.27518106, -0.5931657, 6.1822653, 1.2611313, -3.1795292)
script = ExtResource("7_t7aeq")
priority = 1
tween_resource = SubResource("Resource_pjayo")
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[connection signal="body_entered" from="vault/vault_area" to="vault/vault_area" method="_on_body_entered"]
[connection signal="body_exited" from="vault/vault_area" to="vault/vault_area" method="_on_body_exited"]
